Added demo protection and watermark

--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
         "areaServed": ["Lucknow", "Ashiyana", "Uttar Pradesh"],
         "serviceType": ["Construction", "Interior Design", "Civil Contracting", "Renovation", "Building Extensions"]
     }
+        // Prevent Unauthorized Hosting
+if (window.location.hostname !== "prashantmishraepic-create.github.io") {
+    document.body.innerHTML = "<h1 style='text-align:center;margin-top:100px;'>Unauthorized Hosting Detected</h1>";
+}
+
     </script>
     <style>
         :root {
@@ -921,6 +926,21 @@
     </style>
 </head>
 <body>
+    <!-- DEMO WATERMARK -->
+<div style="
+position: fixed;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%) rotate(-30deg);
+font-size: 90px;
+color: rgba(0,0,0,0.04);
+z-index: 9999;
+pointer-events: none;
+white-space: nowrap;
+font-weight: bold;">
+DEMO VERSION
+</div>
+
     <!-- Navigation -->
     <nav>
         <div class="nav-wrapper">
@@ -1343,6 +1363,17 @@
     <a href="https://wa.me/919999999999" class="whatsapp-btn" target="_blank" aria-label="WhatsApp">💬</a>
 
     <script>
+        // Disable Right Click
+document.addEventListener('contextmenu', function(e) {
+    e.preventDefault();
+});
+// Disable F12
+document.addEventListener('keydown', function(e) {
+    if (e.keyCode == 123) {
+        e.preventDefault();
+    }
+});
+
         // Mobile Menu
         const menuToggle = document.getElementById('menuToggle');
         const navMenu = document.getElementById('navMenu');
